[gd_scene load_steps=8 format=3]

[ext_resource type="Script" path="res://Scripts/OverworldUI/Menu/MenuBoxes/Party/party_box.gd" id="1_7dyeh"]
[ext_resource type="PackedScene" uid="uid://bimv5yqhjn3kt" path="res://Scenes/Overworld_UI/PartyBox/party_member_card.tscn" id="2_e144o"]
[ext_resource type="Texture2D" uid="uid://dfqyl2kbn6ygn" path="res://Sprites/UI_Sprites/NestedBox.png" id="3_lq4u8"]
[ext_resource type="PackedScene" uid="uid://dvo0j8sl71vll" path="res://Scenes/Overworld_UI/PartyStats/character_stats_container.tscn" id="4_ihbdk"]
[ext_resource type="PackedScene" uid="uid://cjfy04tdqt0a0" path="res://Scenes/Overworld_UI/PartyStats/character_ability_container.tscn" id="5_4vdte"]
[ext_resource type="PackedScene" uid="uid://2wwywivln6jw" path="res://Scenes/Overworld_UI/PartyStats/character_magic_container.tscn" id="6_j4xg0"]
[ext_resource type="PackedScene" uid="uid://dsg8c38wy6fuc" path="res://Scenes/Overworld_UI/PartyStats/character_ring_boost_container.tscn" id="7_prtrh"]

[node name="PartyBox" type="VBoxContainer"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 1
script = ExtResource("1_7dyeh")

[node name="PartyCardContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="PartyCards" type="VBoxContainer" parent="PartyCardContainer"]
layout_mode = 2

[node name="PartyMemberCard" parent="PartyCardContainer/PartyCards" instance=ExtResource("2_e144o")]
layout_mode = 2

[node name="PartyMemberCard2" parent="PartyCardContainer/PartyCards" instance=ExtResource("2_e144o")]
layout_mode = 2

[node name="PartyMemberCard3" parent="PartyCardContainer/PartyCards" instance=ExtResource("2_e144o")]
layout_mode = 2

[node name="PartyMemberCard4" parent="PartyCardContainer/PartyCards" instance=ExtResource("2_e144o")]
layout_mode = 2

[node name="CharacterInfo" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="NinePatchRect" type="NinePatchRect" parent="CharacterInfo"]
visible = false
layout_mode = 2
texture = ExtResource("3_lq4u8")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterInfo"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CharacterInfo/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CharacterInfoContainer" type="HBoxContainer" parent="CharacterInfo/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="CharacterStatsContainer" parent="CharacterInfo/HBoxContainer/MarginContainer/CharacterInfoContainer" instance=ExtResource("4_ihbdk")]
layout_mode = 2

[node name="CharacterAbilityContainer" parent="CharacterInfo/HBoxContainer/MarginContainer/CharacterInfoContainer" instance=ExtResource("5_4vdte")]
layout_mode = 2

[node name="CharacterMagicContainer" parent="CharacterInfo/HBoxContainer/MarginContainer/CharacterInfoContainer" instance=ExtResource("6_j4xg0")]
layout_mode = 2

[node name="CharacterRingBoostsContainer" parent="CharacterInfo/HBoxContainer/MarginContainer/CharacterInfoContainer" instance=ExtResource("7_prtrh")]
layout_mode = 2
